# Luogu_answers

./: .gitignore  CMakeLists.txt  Readme-EN.md  Readme.md  main.cpp
Competition/: t1.cpp  t2.cpp  t3.cpp  t4.cpp
HistoryCompetition/10.4/: 1.cmd  t1-gen.cpp  t1-gen.ilk  t1-p.cpp  t1-pai.cpp  t1-pai.ilk  t1-test.in  t1.cpp  t1.ilk  t2-pai.cpp  t2-pai.ilk  t2.cpp  t3.cpp  t4.cpp
cpp/: LICENSE-中文  P1006.cpp  P1010-Pai.cpp  P1010.cpp  P1018.cpp  P1020.cpp  P1077.cpp  P1090.cpp  P1091.cpp  P1104.cpp  P1115.cpp  P1118.cpp  P1130.cpp  P1141.cpp  P1158.cpp  P1162.cpp  P1164.cpp  P1216.cpp  P1217.cpp  P1226.cpp  P1296.cpp  P1308.cpp  P1378.cpp  P1435.cpp  P1439.cpp  P1478.cpp  P1507.cpp  P1518.cpp  P1521.cpp  P1586.cpp  P1596.cpp  P1678.cpp  P1681.cpp  P1719.cpp  P1736.cpp  P1889.cpp  P1969.cpp  P1970.cpp  P2118.cpp  P2563.cpp  (+32 more)
cpp/1210 General Training (easy) for Friday-Saturday/: T1.cpp  T2.cpp  T3.cpp
cpp/2022 Beijing Youth Programming Showcase - Secondary School Group (12.4 Official Assessment)/: card.cpp  random.cpp  subset.cpp  unlock.cpp
cpp/T/: 227.cpp  P1198.cpp  P1631.cpp  T227966.cpp  T235311.cpp  T240678.cpp  T242534.cpp  T246804-HQJ.cpp  T246804.cpp  T246813.cpp  T246828.cpp  T246829.cpp  T246843.cpp  T246862.cpp  T256259.cpp  T268039.cpp  T268044.cpp  T268272.cpp  T268273.cpp  T268274.cpp  T268299.cpp  T268313.cpp  T268340.cpp  T268534.cpp  T277329.cpp  T277330.cpp  T278520.cpp  T278698.cpp  T279254.cpp  T305185.cpp  T305212.cpp  TT.cpp
cpp/T/BetterSolution/: T277330.cpp
cpp/题解/: T268044.md  T268273.md
luogu_csp-j_competition/2022/: T1.cpp  T2.cpp  T3-Luogu.cpp  T3.cpp  T4-Luogu.cpp
sources/: LOGO.ai
信息学竞赛初复赛笔试题选/: PR0021.md
