cmake_minimum_required(VERSION 3.22)
project(Answersfor_luogu)

set(CMAKE_CXX_STANDARD 14)

add_executable(try cpp/try.cpp)
add_executable(P1087 cpp/P1087.cpp)
add_executable(P1020 cpp/P1020.cpp)
add_executable(P1308 cpp/P1308.cpp)
add_executable(P1158 cpp/P1158.cpp)
add_executable(P1090 cpp/P1090.cpp)
add_executable(P1018 cpp/P1018.cpp)
add_executable(P1970 cpp/P1970.cpp)