cmake_minimum_required(VERSION 3.22)
project(Answersfor_luogu)

set(CMAKE_CXX_STANDARD 14)

add_executable(P1678 "cpp/P1678.cpp")
add_executable(P1226 "cpp/P1226.cpp")
add_executable(P1478 "cpp/P1478.cpp")
add_executable(P1077 "cpp/P1077.cpp")
add_executable(T277329 "cpp/T/T277329.cpp")
add_executable(T277330 "cpp/T/T277330.cpp")
add_executable(T277330-NO2 "cpp/T/BetterSolution/T277330.cpp")
add_executable(try "cpp/try.cpp")
add_executable(T278520 "cpp/T/T278520.cpp")
add_executable(T278698 "cpp/T/T278698.cpp")
add_executable(t1 "Competition/t1.cpp")
add_executable(t2 "Competition/t2.cpp")
add_executable(t3 "Competition/t3.cpp")
add_executable(t4 "Competition/t4.cpp")